--- a/ibooking-vue/package.json
+++ b/ibooking-vue/package.json
@@ -8,9 +8,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.0.1",
     "body-parser": "^1.4.3",
-    "express": "^4.4.5"
+    "express": "^4.4.5",
+    "vue": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -19,12 +19,11 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "vue-hot-reload-api": "^2.3.4",
     "vue-loader": "^9.7.0",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.0",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
-
-
