--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 8080
 
 spring:
   mvc:
@@ -8,12 +8,12 @@ spring:
       suffix: .html
         
   datasource:
-    name: ibookingdb
-    url: jdbc:h2:mem:ibookingdb
-    username: sa
-    password: test123
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.h2.Driver
+#    name: studyroom
+    url: jdbc:mysql://localhost:3306/studyroom?
+    username: root
+    password: 151676
+#    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   sql:
     init:
