--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 8080
 
 spring:
   mvc:
@@ -8,18 +8,18 @@ spring:
       suffix: .html
         
   datasource:
-    name: ibookingdb
-    url: jdbc:h2:mem:ibookingdb
-    username: sa
-    password: test123
+#    name: ibookingdb
+    url: jdbc:mysql://localhost:3306/studyroom?
+    username: root
+    password: 802117
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
-  sql:
-    init:
-      schema-locations: classpath:mySchema.sql
-      data-locations: classpath:myData.sql
-      mode: always
+#  sql:
+#    init:
+#      schema-locations: classpath:mySchema.sql
+#      data-locations: classpath:myData.sql
+#      mode: always
 
 mybatis:
   mapper-locations: classpath:com.huawei.ibooking.mapper/*.xml
